# HUSIS

./: README.md
offb/: CMakeLists.txt
offb/msg/: frame.msg  obj.msg  objs.msg
offb/src/: camera.cpp  cood.cpp  coodg.cpp  coodv.cpp  fj005.cpp  gps.cpp  rca.cpp  rca1.cpp  rca2.cpp  tracking.cpp  trial.cpp  vicon0.cpp  vicon1.cpp  vm0.cpp  vm1.cpp  yl0.cpp  yl1.cpp  yl2.cpp  yolo.cpp
offb/src/include/: am_traj.hpp  assign.hpp  define.hpp  movement.cpp  movement.h  root_finder.hpp  run_yolo.cpp  run_yolo.h
